fixed an issue where on small screens the toggler would wrap

--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,12 @@
       background-color: var(--dark-bg) !important;
       color: var(--dark-text);
       padding: 1rem;
+      font-size: 1rem;  
+    }
+
+    .navbar-brand{
       font-size: 1.2rem;
+      font-weight: 800;
     }
 
     /* Accent button */
